--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DISCORD_TOKEN=<BOT_TOKEN_FROM_DEVELOPER_PORTAL>
 CLIENT_ID=<APPLICATION_ID_FROM_DEVELOPER_PORTAL>
 GUILD_ID=<SERVER_ID_TO_DEPLOY_IN>
+DATABASE_URL=<MONGODB_URL>
