fix mistake in package json for built files

--- a/.gitignore
+++ b/.gitignore
@@ -78,4 +78,8 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
+# env variables
 .env
+
+# ignore build files
+dist
