--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "minecraft-discordjs-bot",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node build/index.ts",
-    "format": "npx prettier . --write",
-    "dev": "nodemon index.ts"
+    "start": "node dist/index.js",
+    "format": "npx prettier . --write '**/*.{ts,tsx,js,jsx,json,md}'",
+    "dev": "nodemon src/index.ts",
+    "check-format": "prettier --check '**/*.{ts,tsx,js,jsx,json,md}'"
   },
   "keywords": [],
   "author": "",
